@@ -2,6 +2,7 @@
 --- PyFMI-2.10.4 ---
     * Added 'result_handling' = None as option, deprecated 'none'.
     * Fixed so that 'hasattr' works on log nodes.
+    * Calls to get continuous states derivatives when there are no such states will no longer result in FMU calls.
 
 --- PyFMI-2.10.3 ---
     * Added method to retrieve the unbounded attribute for real variables in FMI2: get_variable_unbounded.
